--- a/.env.txt
+++ b/.env.txt
@@ -1,17 +1,5 @@
 PORT=
 
-# environment which db to connect
-NODE_ENV=development
+MONGO_HOST=
+MONGO_DB=
 
-# postgres connection
-PGUSER=
-PGDATABASE=
-PGDATABASE_TEST=
-PGPASSWORD=
-PGPORT=
-PGHOST=
-
-# for encryption
-ALGORITHM=
-ENCRYPTION_KEY=
-IV=
